maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:11: error: not found: value estFacemur
	if(estFacemur){
           ^