maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
while(!estSurBiscuit){
	keepHandOnSideWall()
}
}


def keepHandOnSideWall(){
	gauche()
	if(estFacemur){
		droite()
		avance()
	}else{
		avance()
	}
}
